; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_texture-render.c_gs_texrender_create.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_texture-render.c_gs_texrender_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gs_texture_render = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.gs_texture_render* @gs_texrender_create(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.gs_texture_render*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = call %struct.gs_texture_render* @bzalloc(i32 8)
  store %struct.gs_texture_render* %6, %struct.gs_texture_render** %5, align 8
  %7 = load i32, i32* %3, align 4
  %8 = load %struct.gs_texture_render*, %struct.gs_texture_render** %5, align 8
  %9 = getelementptr inbounds %struct.gs_texture_render, %struct.gs_texture_render* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.gs_texture_render*, %struct.gs_texture_render** %5, align 8
  %12 = getelementptr inbounds %struct.gs_texture_render, %struct.gs_texture_render* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 4
  %13 = load %struct.gs_texture_render*, %struct.gs_texture_render** %5, align 8
  ret %struct.gs_texture_render* %13
}

declare dso_local %struct.gs_texture_render* @bzalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
